# contract-ink-examples

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/cross-calling/call-by-dep/: package.json
contracts/cross-calling/call-by-dep/artifacts/: erc20.contract  erc20.json
contracts/cross-calling/call-by-dep/contracts/: Cargo.toml  lib.rs
contracts/cross-calling/call-by-dep/tests/: erc20swap.test.ts
contracts/empty/: Cargo.toml  lib.rs
contracts/ownertest/: package.json
contracts/ownertest/contracts/: Cargo.toml  lib.rs
contracts/ownertest/contracts/erc20owner/: Cargo.toml  lib.rs
contracts/ownertest/contracts/owner/: Cargo.toml  lib.rs
contracts/ownertest/contracts/ownertest/: Cargo.toml  lib.rs
contracts/ownertest/scripts/: deploy.ts
contracts/ownertest/tests/: owner.test.ts  ownertest.test.ts
contracts/redspot-erc20/artifacts/: erc20.contract  erc20.json
contracts/redspot-erc20/contracts/: Cargo.toml  erc20_basic.rs  lib.rs
contracts/redspot-erc20/contracts/contract/: Cargo.toml  lib.rs  modules.rs  traits.rs
contracts/redspot-erc20/contracts/erc20_basic/: Cargo.toml  lib.rs  module.rs
contracts/redspot-erc20/contracts/owner/: Cargo.toml  lib.rs  module.rs
crates/example/: Cargo.toml
